--- a/assets/stylesheets.css
+++ b/assets/stylesheets.css
@@ -12,6 +12,12 @@ body {
   margin: 0 0 100px;
 }
 
+* {
+  -webkit-transition: 0.6s cubic-bezier(.08,.68,.43,.93);
+  -moz-transition: 0.6s cubic-bezier(.08,.68,.43,.93);
+  transition: 0.6s cubic-bezier(.08,.68,.43,.93);
+}
+
 .container {
   margin-bottom: 40px;
   text-align: center;
